--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "babel-loader": "^6.2.7",
     "es6-shim": "^0.35.1",
     "json-loader": "^0.5.4",
+    "jsonwebtoken": "^7.1.9",
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.2.0",
+    "koa-convert": "^1.2.0",
+    "koa-generic-session": "^1.11.3",
+    "koa-jwt": "^1.2.0",
+    "koa-passport": "^1.3.0",
     "koa-router": "^7.0.1",
     "pg": "^6.1.0",
     "reflect-metadata": "^0.1.8",
