--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-jwt": "^1.2.0",
     "koa-passport": "^1.3.0",
     "koa-router": "^7.0.1",
+    "koa-static-folder": "^0.1.6",
     "pg": "^6.1.0",
     "reflect-metadata": "^0.1.8",
     "routing-controllers": "^0.6.6",
