--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
         },
         "externalConsole": false,
         "sourceMaps": true,
-        "outDir": "${workspaceRoot}/bin/",
+        "outDir": "${workspaceRoot}/",
         "smartStep":true
 },
         {
