--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
+    "koa-cookie": "^1.0.0",
     "koa-generic-session": "^1.11.3",
     "koa-jwt": "^1.2.0",
     "koa-passport": "^1.3.0",
