--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
     "koa-convert": "^1.2.0",
     "koa-cookie": "^1.0.0",
     "koa-generic-session": "^1.11.3",
+    "koa-json": "^1.1.3",
     "koa-jwt": "^1.2.0",
+    "koa-multer": "^1.0.0",
     "koa-passport": "^1.3.0",
+    "koa-pug": "^3.0.0-1",
     "koa-router": "^7.0.1",
     "koa-static-folder": "^0.1.6",
+    "mysql": "^2.12.0",
     "pg": "^6.1.0",
     "reflect-metadata": "^0.1.8",
     "routing-controllers": "^0.6.6",
     "sequelize": "^3.24.8",
+    "sha.js": "^2.4.8",
+    "sha256": "^0.2.0",
     "ts-loader": "^1.0.0",
     "typescript": "^2.0.6",
     "webpack": "^1.13.3"
