--- a/vue/package.json
+++ b/vue/package.json
@@ -8,9 +8,14 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
     "jwt-decode": "^2.1.0",
-    "vue": "^2.1.0"
+    "mysql": "^2.12.0",
+    "summernote": "^0.8.2",
+    "vue": "^2.1.0",
+    "vue-html-editor": "^0.2.1",
+    "vue-html5-editor": "^0.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -19,6 +24,8 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "pug": "^2.0.0-beta6",
+    "pug-loader": "^2.3.0",
     "vue-loader": "^10.0.0",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.1.0-beta.25",
