--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "koa-generic-session": "^1.11.3",
     "koa-json": "^1.1.3",
     "koa-jwt": "^1.2.0",
+    "koa-logger": "^1.3.0",
     "koa-multer": "^1.0.0",
     "koa-passport": "^1.3.0",
     "koa-pug": "^3.0.0-1",
     "koa-router": "^7.0.1",
+    "koa-static": "^2.0.0",
     "koa-static-folder": "^0.1.6",
     "mysql": "^2.12.0",
     "pg": "^6.1.0",
