--- a/vue/package.json
+++ b/vue/package.json
@@ -8,6 +8,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "dateformat": "^2.0.0",
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
     "jwt-decode": "^2.1.0",
