--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
     "koa-cookie": "^1.0.0",
+    "koa-cors": "^0.0.16",
     "koa-generic-session": "^1.11.3",
     "koa-json": "^1.1.3",
     "koa-jwt": "^1.2.0",
