--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
 version: '2'
 services:
   web:
-    build:
-      context: .
+    image: node:boron
     ports:
       - "3000:3000"
-    command: "nodemon -L bin.js"
+    expose:
+      - "3000"
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: sh -c "npm install -g nodemon; npm install -g yarn; yarn; cd vue; yarn; cd ..; nodemon -L bin.js"
   db:
       image: "mysql"
       ports:
