--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@ services:
     image: node:boron
     ports:
       - "3000:3000"
+      - "56745:56745"
     expose:
       - "3000"
     volumes:
       - .:/app
     working_dir: /app
-    command: sh -c "npm install -g nodemon; npm install -g yarn; yarn; cd vue; yarn; cd ..; nodemon -L bin.js"
+    command: sh -c "npm install -g nodemon; npm install -g yarn; yarn; cd vue; yarn; cd ..; nodemon --debug=56745 -L bin.js"
   db:
       image: "mysql"
       ports:
