--- a/vue/package.json
+++ b/vue/package.json
@@ -17,7 +17,9 @@
     "summernote": "^0.8.2",
     "vue": "^2.1.0",
     "vue-html-editor": "^0.2.1",
-    "vue-html5-editor": "^0.5.1"
+    "vue-html5-editor": "^0.5.1",
+    "vue-router": "^2.1.1",
+    "vuex": "^2.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
