--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,14 @@
 version: '2'
 services:
   web:
-    image: node:boron
+    build: .
     ports:
       - "3000:3000"
       - "56745:56745"
-    expose:
-      - "3000"
     volumes:
       - .:/app
-    working_dir: /app
-    command: sh -c "npm install -g nodemon; npm install -g yarn; yarn; cd vue; yarn; cd ..; nodemon --debug=56745 -L bin.js"
+      - /app/node_modules
+    command: sh -c "webpack; cd vue; yarn; webpack; cd ..; nodemon --debug=56745 -L bin.js"
   db:
       image: "mysql"
       ports:
